force-app/main/default/objects/City_Tier__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Urban</fullName><default>false</default><label>Urban</label></value>
            <value><fullName>Rural</fullName><default>false</default><label>Rural</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>