force-app/main/default/objects/City_Tier__c/fields/City_Type__c.field-meta.xml
<CustomField>
    <fullName>City_Type__c</fullName>
    <label>City Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Metro</fullName><default>false</default><label>Metro</label></value>
            <value><fullName>Non-Metro</fullName><default>false</default><label>Non-Metro</label></value>
            <value><fullName>Hill Station</fullName><default>false</default><label>Hill Station</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>