force-app/main/default/objects/City_Tier__c/fields/Is_Delhi_NCR__c.field-meta.xml
<CustomField>
    <fullName>Is_Delhi_NCR__c</fullName>
    <label>Is Delhi / NCR</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>