force-app/main/default/objects/City_Tier__c/fields/Is_T1_Town__c.field-meta.xml
<CustomField>
    <fullName>Is_T1_Town__c</fullName>
    <label>Is T1 Town</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>