force-app/main/default/objects/City_Tier__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(region list)</fullName><default>false</default><label>(region list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>