force-app/main/default/objects/City_Tier__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>(zone list)</fullName><default>false</default><label>(zone list)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>